# gst-sctp

./: .clang  .gitattributes  .gitignore  .gitmodules  .lvimrc  LICENSE.md  README.md  config.h.meson  experiment  meson.build  meson_options.txt  run
dot/: receiver.dot  sender.dot
evaluation/: .lvimrc  eval_exceptions.py  evaluation.py  requirements.txt
lab_results/2017-10-26_20:05/: experiments_config
lab_results/2017-10-26_21:29/: experiments_config
lab_results/2017-10-27_17:35/: experiments_config
lab_results/2017-10-27_17:50/: experiments_config
lab_results/2017-10-27_18:16/: experiments_config
lab_results/2017-10-28_05:32/: experiments_config
lab_results/2017-11-01_09:10/: experiments_config
lab_results/2017-11-02_09:49/: experiments_config
lab_results/2017-11-04_23:41/: experiments_config
lab_results/2017-11-05_16:40/: experiments_config
lab_results/2017-11-14_08:09/: experiments_config
lab_results/2017-11-14_17:57/: experiments_config
lab_results/2017-11-15_03:56/: experiments_config
lab_results/2017-11-16_01:39/: experiments_config
lab_results/2017-11-23_21:58/: experiments_config
lab_results/2017-11-24_04:59/: experiments_config
lab_results/2017-11-24_12:06/: experiments_config
lab_results/2017-11-25_00:33/: experiments_config
lab_results/2017-11-27_14:18/: experiments_config
lab_results/2017-12-07_12:33/: experiments_config
lab_results/2017-12-07_22:27/: experiments_config
lab_results/2017-12-16_10:37/: experiments_config
lab_results/2018-01-16_14:49/: experiments_config
lab_results/2018-01-16_15:16/: experiments_config
lab_results/2018-01-16_15:44/: experiments_config
lab_results/2018-01-16_16:19/: experiments_config
lab_results/2018-01-16_16:55/: experiments_config
lab_results/2018-01-17_11:16/: experiments_config
lab_results_D200/2017-12-14_23:07/: experiments_config
lab_results_D200/2017-12-14_23:08/: experiments_config
lab_results_D200/2017-12-15_05:10/: experiments_config
lab_results_D200/2017-12-16_19:00/: experiments_config
lab_results_D200_cwnd_regular/2017-12-19_14:40/: experiments_config
lab_results_D200_path_failure/2018-06-20_19:25/: experiments_config
lab_results_D200_regular_usrsctp_fix/2018-01-15_10:24/: experiments_config  udp_100ms_0.5d_200D_500n  udp_100ms_0d_200D_500n  udp_100ms_2d_200D_500n  udp_20ms_0.5d_200D_500n  udp_20ms_0d_200D_500n  udp_20ms_10d_200D_500n  udp_20ms_2d_200D_500n  udp_20ms_5d_200D_500n  udp_20ms_7d_200D_500n  udp_40ms_0d_200D_500n  udp_40ms_2d_200D_500n  udp_40ms_5d_200D_500n  udp_60ms_0d_200D_500n  udp_60ms_2d_200D_500n  udp_60ms_5d_200D_500n  udp_80ms_10d_200D_500n  udp_80ms_2d_200D_500n  udp_80ms_5d_200D_500n  udp_80ms_7d_200D_500n  udpdupl_100ms_0.5d_200D_500n  udpdupl_100ms_2d_200D_500n  udpdupl_100ms_5d_200D_500n  udpdupl_20ms_0.5d_200D_500n  udpdupl_20ms_0d_200D_500n  udpdupl_20ms_5d_200D_500n  udpdupl_20ms_7d_200D_500n  udpdupl_40ms_0d_200D_500n  udpdupl_40ms_5d_200D_500n  udpdupl_60ms_0d_200D_500n  udpdupl_60ms_7d_200D_500n  udpdupl_80ms_0.5d_200D_500n  udpdupl_80ms_0d_200D_500n  udpdupl_80ms_10d_200D_500n  udpdupl_80ms_2d_200D_500n
lab_results_D200_regular_usrsctp_fix/2018-06-20_19:55/: experiments_config
lab_results_D200_regular_usrsctp_fix/2018-06-20_20:17/: experiments_config
lab_results_D200_regular_usrsctp_fix/2018-06-26_23:05/: experiments_config
lab_results_D200_regular_usrsctp_fix/2018-06-26_23:37/: experiments_config
lab_results_D200_usrsctp_fix/2018-01-12_19:52/: experiments_config  udp_100ms_10d_200D_500n  udp_100ms_5d_200D_500n  udp_100ms_7d_200D_500n  udp_40ms_0.5d_200D_500n  udp_40ms_10d_200D_500n  udp_40ms_7d_200D_500n  udp_60ms_0.5d_200D_500n  udp_60ms_10d_200D_500n  udp_60ms_7d_200D_500n  udp_80ms_0.5d_200D_500n  udp_80ms_0d_200D_500n  udpdupl_100ms_0d_200D_500n  udpdupl_100ms_10d_200D_500n  udpdupl_100ms_7d_200D_500n  udpdupl_20ms_10d_200D_500n  udpdupl_20ms_2d_200D_500n  udpdupl_40ms_0.5d_200D_500n  udpdupl_40ms_10d_200D_500n  udpdupl_40ms_2d_200D_500n  udpdupl_40ms_7d_200D_500n  udpdupl_60ms_0.5d_200D_500n  udpdupl_60ms_10d_200D_500n  udpdupl_60ms_2d_200D_500n  udpdupl_60ms_5d_200D_500n  udpdupl_80ms_5d_200D_500n  udpdupl_80ms_7d_200D_500n
lab_results_cwnd_125/: results_udp
lab_results_cwnd_125/2017-11-23_14:47/: experiments_config
lab_results_cwnd_125/2017-11-24_15:45/: experiments_config
lab_results_cwnd_125/2017-11-25_05:47/: experiments_config
lab_results_cwnd_125/2017-11-25_13:48/: experiments_config
lab_results_cwnd_125/2017-12-05_21:10/: experiments_config
lab_results_cwnd_125/2017-12-05_22:58/: experiments_config
lab_results_cwnd_25/2017-11-13_12:10/: experiments_config
lab_results_cwnd_25/2017-11-13_22:16/: experiments_config
lab_results_cwnd_25/2017-11-15_11:25/: experiments_config
lab_results_cwnd_25/2017-11-15_18:37/: experiments_config
lab_results_dupl_125/2017-12-15_11:42/: experiments_config
lab_results_high_drop/2017-12-15_22:44/: experiments_config
lab_results_high_drop/2017-12-16_06:15/: experiments_config
lab_results_high_drop/2017-12-16_07:40/: experiments_config
lab_results_old/2017-10-27_11:59/: experiments_config
lab_results_old/2017-11-24_19:03/: experiments_config
lab_results_old/2017-11-25_11:05/: experiments_config
lab_results_path_failure/2017-11-27_10:14/: experiments_config
lab_results_path_failure/2017-12-06_00:33/: experiments_config
lab_results_path_failure/2017-12-07_13:13/: experiments_config
lab_results_path_failure/2017-12-07_13:52/: experiments_config
lab_results_path_failure/2017-12-07_21:40/: experiments_config
lab_results_path_failure/2017-12-16_09:53/: experiments_config
lab_results_regular_cwnd/2017-10-31_07:19/: experiments_config
rtpsctp/: LICENSE  gstRtpReceive.c  gstRtpSctpReceive.c  gstRtpSctpSend.c  gstRtpSend.c  meson.build
rtpudp/: gstRtpReceive.c  gstRtpSend.c  meson.build
sctp/: Makefile.am  gstsctp.c  gstsctpsink.c  gstsctpsink.h  gstsctpsrc.c  gstsctpsrc.h  gstsctputils.c  gstsctputils.h  gstusrsctputil.c  meson.build
sctpinittest/: gstSctpSinkInitTest.c  gstSctpSrcInitTest.c  meson.build
(+288586 files in other folders)
